2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* geometry.py: Add support for squares, fix bug.

2002-02-07  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

	* bloch.h: Add new GEV Bloch solver.
	* bloch.cpp: Ditto.
	* defs.h : Ditto.
	* defs.cpp : Ditto.
	* camfr_wrap.cpp: Ditto.

2002-02-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.h: New file.
	* infstack.cpp: Ditto.

2002-02-01  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Implement eps_at and mu_at.

2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Add support for slab matrix cache.
	* expression.cpp: Ditto.
	* interface.cpp: Ditto.
	* scatterer.h: Ditto.
	* scatterer.cpp: Ditto.
	* stack.cpp: Ditto.

2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Work around compiler bug.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* material.h: Add signedsqrt.

2001-11-23  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Virtualise n_eff.

2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Add S_flux.
	* camfr_wrap.cpp: Ditto.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Virtualise kz.
	* field.cpp: Ditto.
	* interface.cpp: Ditto.
	* stack.cpp: Ditto.
	* S_scheme.cpp: Ditto.
	* T_scheme.cpp: Ditto.
	* S_scheme_fields.cpp: Ditto.
	* T_scheme_fields.cpp: Ditto.
	* bloch.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	
2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * defs.h: Add support fow TE_TM polarisation.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	