@@ -1,5 +1,9 @@
 2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* infstack.cpp: Clean up.
+
+2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* geometry.py: Add support for squares, fix bug.
 
 2002-02-07  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>
